--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 jobs:
   include:
+    - language: node_js
+      node_js: 12
+      if: branch = master
+      script:
+        - cd ts
+        - npm install
+        - npm run test-cov
+      after_success:
+        - bash <(curl -s https://codecov.io/bash) -cF node_js
     - language: go
       go: 1.12.x
       script:
