--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,11 @@ jobs:
         - go test -race -coverprofile=coverage.txt -covermode=atomic ./service/... ./utils...
       after_success:
         - bash <(curl -s https://codecov.io/bash)
+    - language: java
+      jdk: openjdk8
+      if: branch = master
+      script:
+        - cd java
+        - mvn test -B
+      after_success:
+        - bash <(curl -s https://codecov.io/bash) -cF java
