--- a/ts/package.json
+++ b/ts/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@alicloud/api-gateway-baseclient",
-  "version": "1.3.0",
+  "version": "1.4.1",
   "description": "",
-  "main": "dist/baseclient.js",
+  "main": "dist/client.js",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
     "test-cov": "nyc -e .ts -r=html -r=text -r=lcov npm run test",
