--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ jobs:
         - bash <(curl -s https://codecov.io/bash) -cF node_js
     - language: go
       go: 1.12.x
+      install:
+        - export GO111MODULE=on 
       if: branch = master
       script:
         - cd golang
-        - export GO111MODULE=on
         - go mod tidy
         - go test -race -coverprofile=coverage.txt -covermode=atomic ./service/... ./utils...
       after_success:
