--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alicloud/api-gateway-baseclient",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "",
   "main": "dist/client.js",
   "scripts": {
@@ -9,8 +9,8 @@
     "build": "tsc",
     "prepublishOnly": "tsc"
   },
-  "author": "page",
-  "license": "MIT",
+  "author": "Alibaba Cloud SDK",
+  "license": "Apache-2.0",
   "dependencies": {
     "@alicloud/tea-typescript": "^1.2.0",
     "@types/uuid": "^3.4.6"
